# Pathtracer-Project

./: CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  ComputeShader.cpp  ComputeShader.h  Engine.cpp  Engine.h  Material.cpp  Material.h  Object.cpp  Object.h  README.md  Ray.cpp  Ray.h  SVGFDenoiser.cpp  SVGFDenoiser.h  SVGFDenoiser_old.cpp  SVGFDenoiser_old.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  imgui.ini  main.cpp  presentation.tex  rapport.tex  refs.bib
ObjectClasses/: Mesh.cpp  Mesh.h  MeshObject.cpp  MeshObject.h  SceneObjects.cpp  SceneObjects.h  SphereObject.cpp  SphereObject.h
Shaders/: AccumulationPass.comp.glsl  accumulation.comp.glsl  accumulationDebug.frag  atrous_filter.comp.glsl  debugShader.frag  estimate_variance.comp.glsl  initializationShader.comp.glsl  random_comp.comp.glsl  raytrace.comp.glsl  test_frag.frag  test_shader.comp.glsl  test_vert.vert  uniform_test.comp.glsl
Utilities/: MathUtilities.cpp  MeshBuilder.cpp  MeshBuilder.h  RandomUtilities.cpp
